[project]
name = "mf-piponodes"
description = "A comprehensive collection of utility and quality-of-life nodes for ComfyUI workflows"
version = "0.0.1"
license = {file = "LICENSE.md"} 
classifiers = ["Operating System :: OS Independent"]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/MomentFactory/ComfyUI-MF-PipoNodes"
Documentation = "https://github.com/MomentFactory/ComfyUI-MF-PipoNodes/blob/main/readme.md"
"Bug Tracker" = "https://github.com/MomentFactory/ComfyUI-MF-PipoNodes/issues"

[tool.comfy]
PublisherId = "momentfactory"
DisplayName = "MF-PipoNodes"
Icon = "https://raw.githubusercontent.com/MomentFactory/ComfyUI-MF-PipoNodes/refs/heads/main/icon.png"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
